Fix expand button still being visible on mobile

--- a/site/styles.css
+++ b/site/styles.css
@@ -1585,7 +1585,7 @@ a.clean {
     cursor: help;
 }
 
-@media (max-width: 640) {
+@media (max-width: 640px) {
     .expand-editor-button {
         display: none;
     }
